# beadando_DevOps

./: Dockerfile  README.md  app.py  pyproject.toml  run_all.sh
.github/workflows/: ci-docker.yml
devops_beadando/: app.py
devops_beadando.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
devops_beadando/instance/: data.db
devops_beadando/templates/: index.html
instance/: data.db
templates/: index.html
