[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-beadando"
version = "1.0.0"
description = "DevOps beadandó Python alkalmazás"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3",
    "Flask-SQLAlchemy>=3.1"
]

[project.scripts]
devops-beadando = "devops_beadando.app:main"

[tool.setuptools]
packages = ["devops_beadando"]
include-package-data = true

[tool.setuptools.package-data]
"devops_beadando" = [
    "templates/*.html",
    "static/*",
    "static/**/*"
]
